DTSPB-4138 rollback change in ExceptionRecordService