@@ -37,6 +37,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicBoolean;
 
+import static java.util.stream.Collectors.toList;
 import static uk.gov.hmcts.probate.model.Constants.CAVEAT_EXPIRY_EXTENSION_PERIOD_IN_MONTHS;
 import static uk.gov.hmcts.reform.probate.model.cases.ApplicationType.SOLICITORS;
 import static uk.gov.hmcts.reform.probate.model.cases.grantofrepresentation.SolicitorWillType.GRANT_TYPE_ADMON;
@@ -89,7 +90,7 @@ public class ExceptionRecordService {
             caveatData.setScannedDocuments(erRequest.getScannedDocuments()
                 .stream()
                 .map(it -> documentMapper.toCaseDoc(it, erRequest.getExceptionRecordId()))
-                .toList());
+                .collect(toList()));
 
             log.info("Calling caveatTransformer to create transformation response for bulk scan orchestrator.");
             CaseCreationDetails caveatCaseDetailsResponse =
@@ -129,12 +130,11 @@ public class ExceptionRecordService {
             grantOfRepresentationData.setScannedDocuments(erRequest.getScannedDocuments()
                 .stream()
                 .map(it -> documentMapper.toCaseDoc(it, erRequest.getExceptionRecordId()))
-                .toList());
+                .collect(toList()));
 
             // Add grant type
             if (grantOfRepresentationData.getApplicationType().equals(SOLICITORS)
-                    && GRANT_TYPE_ADMON.equals(grantOfRepresentationData.getSolsWillType())
-                    && !GrantType.INTESTACY.equals(grantType)) {
+                    && GRANT_TYPE_ADMON.equals(grantOfRepresentationData.getSolsWillType())) {
                 grantOfRepresentationData.setGrantType(GrantType.ADMON_WILL);
             } else {
                 grantOfRepresentationData.setGrantType(grantType);
